--- a/dashboard/src/app/teams/navbar-teams/navbar-teams.html
+++ b/dashboard/src/app/teams/navbar-teams/navbar-teams.html
@@ -21,21 +21,13 @@
         </md-button>
       </md-list-item>
       <md-list-item flex class="navbar-subsection-item"
-                    ng-repeat="workspace in navbarRecentWorkspacesController.getRecentWorkspaces()
-                    | orderBy:['attributes.opened', 'attributes.updated']:'reverse'
-                    | limitTo:5"
-                    ng-class="{'recent-workspaces-last-opened': navbarRecentWorkspacesController.isOpen(workspace.id)}">
+                    ng-repeat="team in navbarTeamsController.getTeams()">
           <md-button nav-bar-selected flex che-reload-href
-                     ng-href="{{navbarRecentWorkspacesController.getIdeLink(workspace.id)}}" layout-align="left"
+                     ng-href="#/team/{{team.name}}" layout-align="left"
                      target="_self">
             <div class="navbar-item" layout="row" layout-align="start center">
-              <workspace-status-indicator
-                che-status="navbarRecentWorkspacesController.getWorkspaceStatus(workspace.id)"
-                che-empty-circle="true"
-                class="navbar-icon"
-                title="{{navbarRecentWorkspacesController.getWorkspaceStatus(workspace.id)}}"></workspace-status-indicator>
-            <span title="{{navbarRecentWorkspacesController.getWorkspaceName(workspace.id)}}"
-                  ng-class="{'recent-workspaces-stopped-workspace': navbarRecentWorkspacesController.getWorkspaceStatus(workspace.id) === 'STOPPED'}">{{navbarRecentWorkspacesController.getWorkspaceName(workspace.id)}}</span>
+              <span class="navbar-icon"></span>
+              <span title="{{team.name}}">{{team.name}}</span>
             </div>
           </md-button>
       </md-list-item>
